add custom permissions

--- a/SendMessageApp/app/src/main/res/layout/activity_main.xml
+++ b/SendMessageApp/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,9 @@
         android:id="@+id/send"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/editText"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="11dp"
         android:background="@android:drawable/btn_default"
         android:minWidth="64dp"
         android:onClick="sendMessage"
